--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "axios": "^0.21.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-modal": "^3.13.1",
     "react-model": "^4.0.0",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
@@ -46,6 +47,7 @@
   },
   "devDependencies": {
     "@types/axios": "^0.14.0",
+    "@types/react-modal": "^3.12.0",
     "@types/react-router-dom": "^5.1.7",
     "@types/styled-components": "^5.1.9",
     "@typescript-eslint/eslint-plugin": "^4.21.0",
